@@ -849,74 +849,6 @@ button:active {
 	color: #ffffff;
 }
 
-/* Forms */
-.text-light .form-control,
-.text-light input[type="text"],
-.text-light input[type="search"],
-.text-light input[type="password"],
-.text-light input[type="email"],
-.text-light input[type="url"],
-.text-light input[type="tel"],
-.text-light input[type="number"],
-.text-light input[type="date"],
-.text-light input[type="time"],
-.text-light input[type="datetime"],
-.text-light input[type="datetime-local"],
-.text-light input[type="month"],
-.text-light textarea,
-.text-light select {
-    color: #ffffff;
-    background-color: rgba(0, 0, 0, 0.5);
-    border-color: rgba(0, 0, 0, 0.9);
-}
-.text-light .form-control:focus,
-.text-light input[type="text"]:focus,
-.text-light input[type="search"]:focus,
-.text-light input[type="password"]:focus,
-.text-light input[type="email"]:focus,
-.text-light input[type="url"]:focus,
-.text-light input[type="tel"]:focus,
-.text-light input[type="number"]:focus,
-.text-light input[type="date"]:focus,
-.text-light input[type="time"]:focus,
-.text-light input[type="datetime"]:focus,
-.text-light input[type="datetime-local"]:focus,
-.text-light input[type="month"]:focus,
-.text-light textarea:focus {
-    border-color: rgba(0, 0, 0, 0.9);
-    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.2), 0 0 8px rgba(0, 0, 0, 0.5);
-    -moz-box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
-    box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
-}
-
-/* Form Buttons - Match to Bootstrap .btn */
-.text-light input[type="submit"]:not(.btn-primary),
-.text-light input[type="reset"]:not(.btn-primary),
-.text-light input[type="button"]:not(.btn-primary),
-.text-light button:not(.btn-primary) {
-    color: #ffffff;
-    background-color: rgba(0, 0, 0, 0.5);
-    border-color: rgba(0, 0, 0, 0.9);
-    -webkit-box-shadow: none;
-    box-shadow: none;
-}
-.text-light input[type="submit"]:hover:not(.btn-primary),
-.text-light input[type="submit"]:focus:not(.btn-primary),
-.text-light input[type="submit"]:active:not(.btn-primary),
-.text-light input[type="reset"]:hover:not(.btn-primary),
-.text-light input[type="reset"]:focus:not(.btn-primary),
-.text-light input[type="reset"]:active:not(.btn-primary),
-.text-light input[type="button"]:hover:not(.btn-primary),
-.text-light input[type="button"]:focus:not(.btn-primary),
-.text-light input[type="button"]:active:not(.btn-primary),
-.text-light button:hover:not(.btn-primary),
-.text-light button:focus:not(.btn-primary),
-.text-light button:active:not(.btn-primary) {
-    color: #ffffff;
-    background-color: rgba(0, 0, 0, 0.8);
-    border-color: rgba(0, 0, 0, 0.9);
-}
-
 /* =Dark Text Color
 -----------------------------------------------*/
 
@@ -952,83 +884,6 @@ button:active {
 	-webkit-box-shadow: 0 1px 4px rgba(200,200,200,.4);
 	-moz-box-shadow: 0 1px 4px rgba(200,200,200,.4);
 	box-shadow: 0 1px 4px rgba(200,200,200,.4);
-}
-
-/* Forms */
-.text-dark .form-control,
-.text-dark input[type="text"],
-.text-dark input[type="search"],
-.text-dark input[type="password"],
-.text-dark input[type="email"],
-.text-dark input[type="url"],
-.text-dark input[type="tel"],
-.text-dark input[type="number"],
-.text-dark input[type="date"],
-.text-dark input[type="time"],
-.text-dark input[type="datetime"],
-.text-dark input[type="datetime-local"],
-.text-dark input[type="month"],
-.text-dark textarea,
-.text-dark select {
-	color: #666666;
-    color: rgba(26,26,26,.7);
-	background-color: #ffffff;
-	border-color: rgba(220,220,220,.4);
-}
-.text-dark .form-control:focus,
-.text-dark input[type="text"]:focus,
-.text-dark input[type="search"]:focus,
-.text-dark input[type="password"]:focus,
-.text-dark input[type="email"]:focus,
-.text-dark input[type="url"]:focus,
-.text-dark input[type="tel"]:focus,
-.text-dark input[type="number"]:focus,
-.text-dark input[type="date"]:focus,
-.text-dark input[type="time"]:focus,
-.text-dark input[type="datetime"]:focus,
-.text-dark input[type="datetime-local"]:focus,
-.text-dark input[type="month"]:focus,
-.text-dark textarea:focus {
-	border-color: rgba(200,200,200,.6);
-	-webkit-box-shadow: 0 0 8px rgba(200,200,200,.4);
-	-moz-box-shadow: 0 0 8px rgba(200,200,200,.4);
-	box-shadow: 0 0 8px rgba(200,200,200,.4);
-}
-
-/* Form Buttons - Match to Bootstrap .btn */
-.text-dark input[type="submit"]:not(.btn-primary),
-.text-dark input[type="reset"]:not(.btn-primary),
-.text-dark input[type="button"]:not(.btn-primary),
-.text-dark .button:not(.btn-primary),
-.text-dark button:not(.btn-primary) {
-	background-color: #f8f8f8;
-	border-color: #f2f2f2;
-	border-color: rgba(220,220,220,.4);
-	-webkit-box-shadow: inset 0 1px 0 #ffffff;
-	box-shadow: inset 0 1px 0 #ffffff;
-	color: #666666;
-	color: rgba(26,26,26,.7);
-}
-.text-dark input[type="submit"]:hover:not(.btn-primary),
-.text-dark input[type="submit"]:focus:not(.btn-primary),
-.text-dark input[type="submit"]:active:not(.btn-primary),
-.text-dark input[type="reset"]:hover:not(.btn-primary),
-.text-dark input[type="reset"]:focus:not(.btn-primary),
-.text-dark input[type="reset"]:active:not(.btn-primary),
-.text-dark input[type="button"]:hover:not(.btn-primary),
-.text-dark input[type="button"]:focus:not(.btn-primary),
-.text-dark input[type="button"]:active:not(.btn-primary),
-.text-dark .button:hover:not(.btn-primary),
-.text-dark .button:focus:not(.btn-primary),
-.text-dark .button:active:not(.btn-primary),
-.text-dark button:hover:not(.btn-primary),
-.text-dark button:focus:not(.btn-primary),
-.text-dark button:active:not(.btn-primary) {
-	background-color: #f5f5f5;
-	-webkit-box-shadow: none;
-	box-shadow: none;
-	color: #666666;
-	color: rgba(26,26,26,.7);
 }
 
 /* =Primary Color
